Merge branch 'mode-677'
git-svn-id: https://svn.jboss.org/repos/modeshape/trunk@1994 76366958-4244-0410-ad5e-bbfabb93f86b